[gd_scene load_steps=23 format=3 uid="uid://cvxcrk2fcjvpq"]

[ext_resource type="Texture2D" uid="uid://dfwb7hv65nfov" path="res://Graphical Assets/spritesheets/frog-idle.png" id="1_5sqe0"]
[ext_resource type="Script" path="res://frogtscn.gd" id="1_xh6s1"]
[ext_resource type="Texture2D" uid="uid://28ximm138f47" path="res://Graphical Assets/spritesheets/frog-jump.png" id="2_elx3l"]
[ext_resource type="Texture2D" uid="uid://hmje4c3ku2yv" path="res://Graphical Assets/spritesheets/enemy-deadth.png" id="2_xver0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q3jbw"]
size = Vector2(20, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw7rf"]
atlas = ExtResource("2_xver0")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt22s"]
atlas = ExtResource("2_xver0")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nfpd"]
atlas = ExtResource("2_xver0")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyko8"]
atlas = ExtResource("2_xver0")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyg6t"]
atlas = ExtResource("2_xver0")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w3bn"]
atlas = ExtResource("2_xver0")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_okpt1"]
atlas = ExtResource("1_5sqe0")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhc8j"]
atlas = ExtResource("1_5sqe0")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4q3c"]
atlas = ExtResource("1_5sqe0")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pru4"]
atlas = ExtResource("1_5sqe0")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vexva"]
atlas = ExtResource("2_elx3l")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c58w7"]
atlas = ExtResource("2_elx3l")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdv86"]
atlas = ExtResource("2_elx3l")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_g15s8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw7rf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt22s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nfpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyko8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyg6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w3bn")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_okpt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhc8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4q3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pru4")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vexva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c58w7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdv86")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6t1iy"]
radius = 174.046

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ogqct"]
size = Vector2(16, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_culsk"]
size = Vector2(24, 6)

[node name="Frog" type="CharacterBody2D"]
script = ExtResource("1_xh6s1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_q3jbw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -11)
sprite_frames = SubResource("SpriteFrames_g15s8")
animation = &"Idle"
metadata/_edit_lock_ = true

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
visible = false
shape = SubResource("CircleShape2D_6t1iy")

[node name="PlayerDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeath"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_ogqct")

[node name="PlayerCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_culsk")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerDeath" to="." method="_on_player_death_body_entered"]
[connection signal="body_exited" from="PlayerDeath" to="." method="_on_player_death_body_exited"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
[connection signal="body_exited" from="PlayerCollision" to="." method="_on_player_collision_body_exited"]
